--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <title>Haru Cafe 홈</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Haru Cafe is a cozy manga cafe where you can enjoy a wide selection of manga, delicious beverages, and a relaxing atmosphere.">
+  <meta name="author" content="Haru Cafe">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
