updated index.html links + small edits

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Haru Cafe">
   <meta property="og:description" content="Haru Cafe is a cozy manga cafe where you can enjoy a wide selection of manga, delicious beverages, and a relaxing atmosphere.">
-  <meta property="og:image" content="https://www.haru-cafe.kennethmead.dev/images/haru-cafe-logo.png">
-  <meta property="og:url" content="https://www.haru-cafe.kennethmead.dev">
+  <meta property="og:image" content="https://www.harucafe26.com/images/haru-cafe-logo.png">
+  <meta property="og:url" content="https://www.harucafe26.com/">
   <meta property="og:type" content="website">
 </head>
 <body class="mat-typography">
@@ -24,8 +24,8 @@
     {"@context" : "http://schema.org",
      "@type" : "Organization",  
       "name" : "Haru Cafe",
-      "url" : "https://www.haru-cafe.kennethmead.dev", 
-      "logo": "https://www.haru-cafe.kennethmead.dev/images/haru-cafe-logo.png" }
+      "url" : "https://www.harucafe26.com/", 
+      "logo": "https://www.harucafe26.com/images/haru-cafe-logo.png" }
     </script>
 </body>
 </html>
